--- a/style.css
+++ b/style.css
@@ -1,29 +1,154 @@
-html {
-    height: 100%;
-    width: 100%;
-    background-color: #c4c4c4;
-  }
-  body {top: 0; 
-        left: 0; 
-        width: 99%; 
-        height: 97%;
-        position: absolute; 
-        display: table;
-       font-size: "70"}
-  
-  p {display: table-cell; 
-     vertical-align: middle;
-     text-align: center;
-    }
-  
-  button {
-    background-color: #e7e7e7;
-    border: none;
-    color: #63452c;
-    padding: 15px 32px;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color: #ffffff;
+    background-color: #1a1a1a;
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+}
+
+.sidebar {
+    width: 25%;
+    background-color: #222222;
+    padding: 20px;
+}
+
+.sidebar .profile {
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 20px;
-  }
+}
+
+.sidebar .profile img {
+    border-radius: 10%;
+    width: 100px;
+    height: 100px;
+}
+
+.sidebar .info {
+    margin-top: 20px;
+}
+
+.sidebar .info p {
+    margin: 10px 0;
+}
+
+.sidebar .languages p, 
+.sidebar .skills p {
+    margin: 5px 0;
+}
+
+.main-content {
+    width: 75%;
+    padding: 20px;
+    background-color: #333333;
+    overflow-y: scroll;
+}
+
+header {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+header h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+header p {
+    font-size: 1.2em;
+    color: #ffcc00;
+}
+
+header button {
+    padding: 10px 20px;
+    background-color: #ffcc00;
+    border: none;
+    color: #333333;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+/*
+.stats {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.stat-item {
+    text-align: center;
+    flex-basis: 23%;
+}
+
+.stat-item h3 {
+    font-size: 2em;
+    color: #ffcc00;
+}
+*/
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-left: 195px;
+}
+
+.service-item {
+    background-color: #444444;
+    padding: 20px;
+    flex-basis: calc(33.333% - 20px);
+    border-radius: 5px;
+    text-align: center;
+}
+
+.service-item h4 {
+    margin-bottom: 15px;
+    color: #ffcc00;
+}
+
+.service-item button {
+    padding: 10px 15px;
+    background-color: #ffcc00;
+    border: none;
+    color: #333333;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.skill{
+    margin-top: 40px;
+    margin-bottom: 15px;
+}
+
+.skill p{
+    margin: 0 0 5px 0;
+    font-weight: bold;
+}
+
+.progress-bar{
+    width:100%;
+    background-color: #444444;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.progress{
+    height: 10px;
+    background-color: #ffcc00;
+    border-radius: 5px 0 0 5px;
+}
+
+.credits{
+    margin-left: 350px;
+    color: lightgoldenrodyellow;
+}
+
+
+
+
+
+
